updated who I am section

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
+							<li><a href="#one">Who I am</a></li>
+							<li><a href="#two">What I do</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
@@ -35,10 +35,9 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Jiafeng Du</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<p name="Jiafeng-intro">I am a MSCS student at Northeastern University, and I am passionate about building products that help people live better lives.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly" alt="Learn more about Jiafeng Du">Learn more</a></li>
 							</ul>
 						</div>
 					</section>
@@ -46,37 +45,37 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/Silicon_valley.png" alt="jiafeng du's silicon valley image" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Silicon Valley</h2>
+									<p>Now I am doing my MSCS at NEU silicon valley campus. Shout out to my friends like Micah, Liz, Inky and the rest back in Orange County, California for their support!</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://siliconvalley.northeastern.edu/" alt="Northeastern Silicon Valley link" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/uci_graduation.jpg" alt="jiafeng du's uci graduation image" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>UCI Graduation</h2>
+									<p>I graduated from UC Irvine with a degree in physics and a degree in math. After graduation, I worked at Madison WI as a technical solutions engineer.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://commencement.uci.edu/" alt="UCI Commencement link" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/beachhacks.jpg" alt="jiafeng du's beachhacks logo" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Beach Hack 2019</h2>
+									<p>This is the first hackathon I participated in, and at the time, I took about 2 CS courses at UCI. My partner and I built a physics experiment simulation. I was inspired to learn more about CS. It all started around this period.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://github.com/carletonz/BeachHacks2019" class="button" alt="Beach Hack 2019 Github link">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -86,18 +85,24 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>What I do</h2>
+							<p>My primary interests are using AI and ML to build products that help people live better lives. I invite you to witness my journey and projects.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
+									<h3>Headstarter AI Project to come</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button" alt="Headstarter AI Project to come">Learn more</a></li>
+									</ul>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Virtual Pet Game SPA</h3>
+									<p>This is a single page application that allows users to create and care for virtual pets. The application is built using ExpressJS and React, and it is also responsive.</p>
+									<ul class="actions">
+										<li><a href="https://github.com/JiafengDu/virtual-pet-project" class="button" alt="Virtual Pet Game Single Page Application Github link">Learn more</a></li>
+									</ul>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
