--- a/index.html
+++ b/index.html
@@ -106,28 +106,21 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Game of Life GUI</h3>
+									<p>This is a GUI for the Game of Life. It is built using Java Swing. It is a simple GUI that allows users to create and edit cells in the Game of Life. It follows the SOLID principles.</p>
+									<ul class="actions">
+										<li><a href="https://github.com/JiafengDu/game_of_life_gui" class="button" alt="Game of Life GUI Github link">Learn more</a></li>
+									</ul>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Blango blog posting website</h3>
+									<p>Blango is a blog posting website that allows users to post their blogs and read other people's blogs. It is built using Django and sqlite3.</p>
+									<ul class="actions">
+										<li><a href="https://github.com/JiafengDu/blango" class="button" alt="Blango Github link">Learn more</a></li>
+									</ul>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 
@@ -135,10 +128,10 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Leave me a message and I will get back to you as soon as possible.</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
+									<form method="post" action="https://formspree.io/f/mdoqrzzq">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
@@ -154,11 +147,11 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><input type="submit" value="Send Message" class="button submit"></li>
 										</ul>
 									</form>
 								</section>
-								<section>
+								<!-- <section>
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
@@ -185,7 +178,7 @@
 											</ul>
 										</li>
 									</ul>
-								</section>
+								</section> -->
 							</div>
 						</div>
 					</section>
