added my resume

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<h1>Jiafeng Du</h1>
 							<p name="Jiafeng-intro">I am a MSCS student at Northeastern University, and I am passionate about building products that help people live better lives.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly" alt="Learn more about Jiafeng Du">Learn more</a></li>
+								<li><a href="/assets/Jiafeng-Tech-Resume-7-23-2024.pdf" class="button scrolly" alt="Learn more about Jiafeng Du" download="Jiafeng-Tech-Resume-7-23-2024.pdf">Resume download</a></li>
 							</ul>
 						</div>
 					</section>
